<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/native_banner_ad_containers"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:fontFamily="@font/leaflet_visbyroundcf_bold"
                android:text="@string/design_saved"
                android:textColor="#111827"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="5.0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/leaflet_seprator_line"
            android:backgroundTint="#111827" />

        <TextView
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/leaflet_visbyroundcf_medium"
            android:gravity="center_horizontal"
            android:text="@string/your_design_successfully_saved_in_my_poster"
            android:textColor="#111827"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.30"
                android:gravity="center">

                <TextView
                    android:id="@+id/btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/leaflet_btn_rounded_text_bg"
                    android:fontFamily="@font/leaflet_visbyroundcf_bold"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_40sdp"
                    android:paddingRight="@dimen/_40sdp"
                    android:text="@string/ok"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
