<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="@dimen/_10sdp">

        <RelativeLayout
            android:id="@+id/popLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0.0dip" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/header_rel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/header_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/leaflet_visbyroundcf_bold"
                        android:gravity="center"
                        android:text="@string/need_permission"
                        android:textColor="#111827"
                        android:textSize="20.0sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_below="@+id/header_rel"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/leaflet_seprator_line"
                    android:backgroundTint="#111827" />

                <TextView
                    android:id="@+id/msg"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/header_rel"
                    android:layout_margin="5.0dip"
                    android:fontFamily="@font/leaflet_visbyroundcf_medium"
                    android:gravity="center"
                    android:padding="10.0dip"
                    android:text="@string/permission_msg"
                    android:textColor="#111827"
                    android:textSize="18.0sp" />

                <LinearLayout
                    android:id="@+id/button_ll"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/msg"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.05" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.45"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/btn_cancel"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:background="@drawable/leaflet_btn_rounded_text_bg"
                            android:fontFamily="@font/leaflet_visbyroundcf_bold"
                            android:gravity="center"
                            android:text="@string/cancel"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.45"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/btn_settings"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:background="@drawable/leaflet_btn_rounded_text_bg"
                            android:fontFamily="@font/leaflet_visbyroundcf_bold"
                            android:gravity="center"
                            android:text="@string/settings"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.05" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>
