<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/native_banner_ad_containers"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:fontFamily="@font/leaflet_visbyroundcf_bold"
                android:text="@string/app_name"
                android:textColor="#111827"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="5.0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/leaflet_seprator_line"
            android:backgroundTint="#111827" />

        <TextView
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/leaflet_visbyroundcf_bold"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="#111827"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.05" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.45"
                android:gravity="center">

                <TextView
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/leaflet_btn_rounded_text_bg"
                    android:fontFamily="@font/leaflet_visbyroundcf_bold"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.45"
                android:gravity="center">

                <TextView
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/leaflet_btn_rounded_text_bg"
                    android:fontFamily="@font/leaflet_visbyroundcf_bold"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.05" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
