<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/_270sdp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_2sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="?actionBarSize"
                        android:fontFamily="@font/leaflet_visbyroundcf_bold"
                        android:gravity="center"
                        android:text="@string/add_text"
                        android:textColor="#111827"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="12dp"
                    android:background="#E5E7EB" />

                <com.online.flyer.design.postermaker.Leaflet_view.Leaflet_AutoResizeEditText
                    android:id="@+id/auto_fit_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:background="@drawable/leaflet_edit_text_bg"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="top|start"
                    android:hint="@string/add_text_here"
                    android:imeActionLabel="Done"
                    android:imeOptions="actionPrevious"
                    android:inputType="textMultiLine"
                    android:isScrollContainer="true"
                    android:maxLength="250"
                    android:textColor="#111827"
                    android:textColorHint="#9CA3AF"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10.0dip"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp">

                    <RelativeLayout
                        android:id="@+id/btnCancelDialog"
                        android:layout_width="match_parent"
                        android:layout_height="39dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/leaflet_rounded_border"
                        android:backgroundTint="@color/white">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/leaflet_visbyroundcf_bold"
                            android:text="@string/cancel"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btnAddTextSDialog"
                        android:layout_width="match_parent"
                        android:layout_height="39dp"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/leaflet_btn_rounded_text_bg">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/leaflet_visbyroundcf_bold"
                            android:text="@string/add"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <!--                <Button-->
                    <!--                    android:layout_width="fill_parent"-->
                    <!--                    android:layout_height="@dimen/_30sdp"-->
                    <!--                    android:layout_marginEnd="@dimen/_2sdp"-->
                    <!--                    android:layout_weight="1.0"-->
                    <!--                    android:background="@drawable/rounded_border"-->
                    <!--                    android:backgroundTint="#3F3F3F"-->
                    <!--                    android:fontFamily="@font/roboto_regular"-->
                    <!--                    android:text="@string/cancel"-->
                    <!--                    android:textColor="@color/black"-->
                    <!--                    android:textSize="12sp" />-->
                    <!--   android:background="@drawable/rounded_bg"-->

                    <!--                <Button-->
                    <!--                    android:layout_width="fill_parent"-->
                    <!--                    android:layout_height="@dimen/_30sdp"-->
                    <!--                    android:layout_marginStart="@dimen/_2sdp"-->
                    <!--                    android:layout_weight="1.0"-->
                    <!--                    android:background="@drawable/btn_rounded_text_bg"-->
                    <!--                    android:fontFamily="@font/roboto_regular"-->
                    <!--                    android:text="@string/add"-->
                    <!--                    android:textColor="#111827"-->
                    <!--                    android:textSize="12sp" />-->
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>
