<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/appbg"
        app:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:id="@+id/popLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/native_banner_ad_containers"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_heater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/leaflet_visbyroundcf_bold"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="20.0sp" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="5.0dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/leaflet_seprator_line"
                android:backgroundTint="@color/white" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15.0dip"
                android:fontFamily="@font/leaflet_visbyroundcf_medium"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18.0sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.45"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/btn_no"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/leaflet_btn_rounded_text_bg"
                        android:fontFamily="@font/leaflet_visbyroundcf_bold"
                        android:gravity="center"
                        android:text="@string/no"
                        android:textColor="@color/appbg"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.45"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/btn_yes"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/leaflet_btn_rounded_text_bg"
                        android:fontFamily="@font/leaflet_visbyroundcf_bold"
                        android:gravity="center"
                        android:text="@string/yes"
                        android:textColor="@color/appbg"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>
